# waffle-house

./: .gitignore
BST/: out.txt
BST/lib/: dune  impl.ml
BST/lib/Strategies/: baseSinglePass.ml  baseSinglePass.mli  staged.mli  stagedBespoke.ml  stagedBespoke.mli
handwritten/: dune  dune-project
handwritten-haskell/: CHANGELOG.md  README.md  handwritten-haskell.cabal  package.yaml
handwritten-ocaml/: README.md  dune  dune-project  handwritten.opam  output.cmm
handwritten-rust/: Cargo.toml
handwritten-rust/benches/: gen_bm.rs
handwritten-rust/src/: main.rs
handwritten/_build/: .db  .digest-db  log
handwritten/_build/default/: README.md  handwritten.dune-package  handwritten.install
handwritten/test/: dune
mini-etna/: README.md  dune-project  error_log.txt  out  out.txt  output.txt  output2.txt  output_variance.txt  random  results.txt  results_analyzed.txt  variances.txt
mini-etna/BST/_build/: .db  .digest-db  log
mini-etna/BST/lib/: dune
mini-etna/RBT/lib/: dune  impl.ml  test.ml
mini-etna/RBT/lib/Strategies/: baseBespoke.ml  baseTypeStaged.ml  baseTypeStagedFastInt.ml  baseTypeStagedFastInt.mli  crowbarBespoke.ml  nat.ml  qcheckBespoke.ml
mini-etna/STLC/lib/: dune  impl.ml  test.ml
mini-etna/_build/: .db  .digest-db  log
mini-etna/scripts/: Analyze.py  Analyze2.py  Analyze3.py  Chart.py  Process.py  Run.py
mini-etna/test_outputs/: prop_DeleteDelete_bespoke.txt  prop_DeleteDelete_type.txt  prop_DeleteDelete_type_0.txt  prop_DeleteDelete_type_1.txt  prop_DeleteDelete_type_10.txt  prop_DeleteDelete_type_11.txt  prop_DeleteDelete_type_12.txt  prop_DeleteDelete_type_13.txt  prop_DeleteDelete_type_14.txt  prop_DeleteDelete_type_15.txt  prop_DeleteDelete_type_16.txt  prop_DeleteDelete_type_17.txt  prop_DeleteDelete_type_18.txt  prop_DeleteDelete_type_19.txt  prop_DeleteDelete_type_2.txt  prop_DeleteDelete_type_20.txt  prop_DeleteDelete_type_21.txt  prop_DeleteDelete_type_22.txt  prop_DeleteDelete_type_23.txt  prop_DeleteDelete_type_24.txt  prop_DeleteDelete_type_25.txt  prop_DeleteDelete_type_26.txt  prop_DeleteDelete_type_27.txt  prop_DeleteDelete_type_28.txt  prop_DeleteDelete_type_29.txt  prop_DeleteDelete_type_3.txt  prop_DeleteDelete_type_30.txt  prop_DeleteDelete_type_31.txt  prop_DeleteDelete_type_32.txt  prop_DeleteDelete_type_33.txt  prop_DeleteDelete_type_34.txt  prop_DeleteDelete_type_35.txt  prop_DeleteDelete_type_36.txt  prop_DeleteDelete_type_37.txt  prop_DeleteDelete_type_38.txt  prop_DeleteDelete_type_39.txt  prop_DeleteDelete_type_4.txt  prop_DeleteDelete_type_40.txt  prop_DeleteDelete_type_41.txt  prop_DeleteDelete_type_42.txt  (+169 more)
mini-etna/util/_build/: .db  .digest-db  (+1 more)
ocaml/: README.md  dune-project
ocaml/lib/: basicgen.ml  codegen.ml  dune  fastgen.ml  generator.ml  generator.mli  nbe.ml  staged_generator.ml  staged_generator.mli  staged_treegen.ml  tree.ml
paper/: .gitignore  Makefile  acmart.cls  bib.bib  harry.bib  macros.tex  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
paper/reviews/: oopsla25.txt  oopsla26.txt  rebuttal_oopsla26.md
ppx_staged/: generator_output.txt
ppx_staged/src/: dune
splitmix/: dune-project  splitmix.opam
splitmix/lib/: dune  splitmix.c  splitmix.ml
splitmix/src/: dune  splitmix.c  splitmix.ml  splitmix.mli  utils.ml
staged/: README.md
staged-ocaml/: PROBLEM.md  README.md  dune  dune-project  fast_gen.opam  impl_preprocessed.ml  mt.sh  repin.sh
staged-ocaml/lib/: baseBespoke.ml  baseType.cmt  baseTypeStaged.ml  bq_generator.ml  bq_generator.mli  bq_random.ml  bst.ml  bst.mli  code.ml  code.mli  codecps.ml  codegen.ml  codegen_lib.ml  custom.ml  dump_cmt.ml  dune  generator_intf.ml  impl.cmt  impl.ml  implb.ml  nat.cmt  nat.ml  nat.mli  random_intf.ml  small.ml  stage.ml  staged_generator.ml  staged_generator.mli  staged_generator_lib.ml  staged_treegen.ml  tree.ml
staged-ocaml/lib/codegen/: codecps.ml
staged-ocaml/lib/randomness/: bq_random.ml  c_random.ml  c_random.mli  c_random_runtime.ml  c_sr_dropin_random.ml  c_sr_dropin_random_runtime.ml  lehmer_random.ml  lehmer_random.mli  lehmer_random_runtime.ml  lehmer_stub.c  random_intf.ml  random_stub.c  sr_random.ml  sr_random.mli  sr_random_stub.c
staged-ocaml/test/: benchmark.ml  boollist_benchmark.ml  bq_generator.ml  bq_generator.mli  bst_benchmark.ml  bst_gen_c.ml  bst_gen_sr.ml  bst_impl.ml  bst_single_benchmark.ml  bst_type_benchmark.ml  count_binds.ml  difftest.ml  dune  nat.ml  nat.mli  stlc_benchmark.ml  stlc_benchmark_type.ml  stlc_gen_bq.ml  stlc_gen_st.ml  stlc_impl.ml  test_compile_time.ml  test_fast_gen.ml  trace_generator.ml
staged-ocaml/test/magictrace/: magic_trace.ml  magic_trace.mli  stop_stubs.c
staged-ocaml/test/strategies/BST/: bst_baseBespoke.ml  bst_baseBespoke_Staged_C.ml  bst_baseBespoke_Staged_CSR.ml  bst_baseBespoke_Staged_SR.ml  bst_baseSingleBespoke.ml  bst_baseSingleBespoke_Staged_CSR.ml  bst_baseSingleBespoke_Staged_SR.ml  bst_baseType.ml  bst_baseType_Staged_CSR.ml  bst_baseType_Staged_SR.ml  bst_baseType_Staged_SR.mli  bst_dune  bst_type.ml  dune  nat.ml
staged-ocaml/test/strategies/BoolList/: boollist.ml  boollist_staged_csr.ml  boollist_staged_sr.ml  boollist_staged_sr.mli  dune
staged-ocaml/test/strategies/STLC/: baseBespoke.ml  baseBespoke.mli  baseBespoke_Staged_CSR.ml  baseBespoke_Staged_SR.ml  baseType.ml  baseType_Staged_CSR.ml  baseType_Staged_SR.ml  baseType_Staged_SR.mli  dune  stlc_baseBespoke_Staged_CSR.ml  stlc_baseBespoke_Staged_SR.ml  stlc_baseType_Staged_CSR.ml  stlc_baseType_Staged_SR.ml  stlc_dune
staged-scala/: README.md  build.sbt  out  results.csv
staged/lib/: basicgen.ml  fastgen.ml
staged/test/: dune
(+515 files in other folders)
