(lang dune 3.17)

(name fast_gen)

(generate_opam_files true)

; (source
;  (github username/reponame))

(authors "Joseph Cutler <jwc@seas.upenn.edu>" "Thia Richey <lapwing@seas.upenn.edu>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(package
 (name fast_gen)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  (alcotest :with-test)
  core
  base_quickcheck
 )
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
