(include_subdirs unqualified)

(library
 (name BST)
 (modules
  impl
  spec
  test
  qcheckType
  qcheckBespoke
  crowbarType
  crowbarBespoke
  baseType
  baseBespoke
  baseSinglePass
  stagedBespoke
  staged
  nat
  display)
 (libraries qcheck sexplib base crowbar util core core_bench)
 (preprocess
  (pps ppx_jane ppx_stage.ppx ppx_jane ppx_bench)))

(env
 (_
  (flags (:standard -w -32))))