(test
(preprocess (pps ppx_jane ppx_deriving.eq ppx_deriving.show))
 (libraries fast_gen alcotest core core_bench BST BoolList STLC)
  (foreign_stubs
  (language c)
  (names stop_stubs)) 
 (name test_fast_gen))
(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -g -w "-26-27-32-33-34-37-39"))))
