(include_subdirs unqualified)

(library
 (name RBT)
 (modules
  impl
  spec
  test
  qcheckType
  qcheckBespoke
  crowbarType
  crowbarBespoke
  baseType
  baseBespoke
  baseTypeStaged
  baseTypeStagedFastInt
  nat
  display)
 (libraries qcheck crowbar util core unboxed_splitmix)
 (preprocess
  (pps ppx_jane)))
